[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

[workspace]

members = [
    "aoc_1",
    "aoc_2",
    "aoc_3",
    "aoc_4",
    "aoc_5",
    "aoc_6",
    "aoc_7",
    "aoc_8",
    "aoc_9",
    "aoc_10",
    "aoc_11",
]


[workspace.dependencies]
anyhow = "1"
criterion = "0.4.0"
itertools = "0.10"
