[package]
name = "aoc_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aoc_1"
path = "src/main.rs"

[lib]
name = "aoc_1"
path = "src/lib.rs"

[[bench]]
name = "bench"
harness = false


[dependencies]
anyhow.workspace = true
itertools.workspace = true

[dev-dependencies]
criterion.workspace = true
